add a code space

--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -16,7 +16,10 @@
     "# Introduction:\n",
     "- Provide some relevant background information on the topic so that someone unfamiliar with it will be prepared to understand the rest of your proposal\n",
     "- Clearly state the question you will try to answer with your project\n",
-    "- Identify and describe the dataset that will be used to answer the question"
+    "- Identify and describe the dataset that will be used to answer the question\n",
+    "3 continuous variables, 3 binary variables, 14 categorical variables; \n",
+    "This dataset includes 173 species of mushrooms with caps from various families and one\n",
+    "\tentry for each species."
    ]
   },
   {
@@ -25,7 +28,22 @@
    "metadata": {},
    "source": [
     "# Preliminary exploratory data analysis:\n",
-    "- Demonstrate that the dataset can be read from the web into R \n",
+    "- Demonstrate that the dataset can be read from the web into R "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5571c5a2-62c4-49cb-8184-caa63799db10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ecb4706-90b3-4754-9f63-af47ef685329",
+   "metadata": {},
+   "source": [
     "- Clean and wrangle your data into a tidy format\n",
     "- Using only training data, summarize the data in at least one table (this is exploratory data analysis). An example of a useful table could be one that reports the number of observations in each class, the means of the predictor variables you plan to use in your analysis and how many rows have missing data. \n",
     "- Using only training data, visualize the data with at least one plot relevant to the analysis you plan to do (this is exploratory data analysis). An example of a useful visualization could be one that compares the distributions of each of the predictor variables you plan to use in your analysis."
@@ -34,7 +52,9 @@
   {
    "cell_type": "markdown",
    "id": "b0ec106a-e5d3-4a99-b755-483813c3ea71",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Methods:\n",
     "- Explain how you will conduct either your data analysis and which variables/columns you will use. Note - you do not need to use all variables/columns that exist in the raw data set. In fact, that's often not a good idea. For each variable think: is this a useful variable for prediction?\n",
