--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -545,6 +545,12 @@
    "source": [
     "# Methods:\n",
     "- Explain how you will conduct either your data analysis and which variables/columns you will use. Note - you do not need to use all variables/columns that exist in the raw data set. In fact, that's often not a good idea. For each variable think: is this a useful variable for prediction?\n",
+    "\n",
+    "The available vairables are 3 continuous and 3 two-case categorical, of which we can modify the values into 0 and 1.\n",
+    "- Continuous: width, height, diameter\n",
+    "- Categorical (2 cases): does-bruise-bleed, veil-type, has-ring\n",
+    "\n",
+    "We will conduct our data analysis by starting with the 3 continuous variables: width, height, and diameter to determine a mushroom's edibility and identifying the accuracy of the model.\n",
     "- Describe at least one way that you will visualize the results"
    ]
   },
