--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -14,12 +14,47 @@
    "metadata": {},
    "source": [
     "# Introduction:\n",
-    "- Provide some relevant background information on the topic so that someone unfamiliar with it will be prepared to understand the rest of your proposal\n",
-    "- Clearly state the question you will try to answer with your project\n",
-    "- Identify and describe the dataset that will be used to answer the question\n",
-    "3 continuous variables, 3 binary variables, 14 categorical variables; \n",
-    "This dataset includes 173 species of mushrooms with caps from various families and one\n",
-    "\tentry for each species."
+    "- Provide some relevant background information on the topic so that someone unfamiliar with it will be prepared to understand the rest of your proposal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2953ac90-bc88-4ea3-a25b-dfa79b5db339",
+   "metadata": {},
+   "source": [
+    "Mushrooms can be made for delicious dishes, but some of them are poisonous! Identifying the eligibility from the appearance of mushrooms would be essential especially when we encounter a new species of mushroom."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c13ebbea-f389-434a-a346-ccf9dc6e6d27",
+   "metadata": {},
+   "source": [
+    "- Clearly state the question you will try to answer with your project\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "889875c6-a901-4d26-9b92-bbd4ef414949",
+   "metadata": {},
+   "source": [
+    "In our project, we aim to train a model which uses classification method to predict whether an unknown mushroom is edible or poisonous given various dimensions in its appearance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e26bf6df-afe1-4025-9d9d-e003b6dd9574",
+   "metadata": {},
+   "source": [
+    "- Identify and describe the dataset that will be used to answer the question"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fac4f21-9c85-4bee-bfd6-9809e64bf5a2",
+   "metadata": {},
+   "source": [
+    "The dataset to train our model is called \"Secondary mushroom data\" from UCI Machine Learning Repository (https://mushroom.mathematik.uni-marburg.de/files/). This dataset includes 61069 hypothetical mushrooms with caps based on 173 species (353 mushrooms per species). Each mushroom is identified as edible, poisonous, or of unknown edibility. Of the 20 variables, 3 are continuous, and 17 are nominal (3 are binary, and 14 are categorical)."
    ]
   },
   {
