--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -582,10 +582,10 @@
     "- Explain how you will conduct either your data analysis and which variables/columns you will use. Note - you do not need to use all variables/columns that exist in the raw data set. In fact, that's often not a good idea. For each variable think: is this a useful variable for prediction?\n",
     "\n",
     "The available vairables are 3 continuous and 3 binary, of which we can modify the values into 0 and 1.\n",
-    "- Continuous: width, height, diameter\n",
-    "- Binary: does-bruise-bleed, veil-type, has-ring\n",
+    "1) Continuous: width, height, diameter\n",
+    "2) Binary: does-bruise-bleed, veil-type, has-ring\n",
     "\n",
-    "We will conduct our data analysis by starting with the 3 continuous variables: width, height, and diameter to determine a mushroom's edibility. From that we could identify the accuracy of the model that uses only physical attributions of a mushroom and determine whether it can provide insight regarding edibility. \n",
+    "We will conduct our data analysis by starting with the 3 continuous variables: width, height, and diameter to determine a mushroom's edibility. From that we could identify the accuracy of the model that uses only physical attributions of a mushroom and determine whether it can provide insight regarding edibility. Later we would add binary variables to the current model and see if the accuracy will be enhanced.\n",
     "- Describe at least one way that you will visualize the results"
    ]
   },
