--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -5,7 +5,7 @@
    "id": "3a257b83-cbe0-46a5-a41f-8660d2c7d73c",
    "metadata": {},
    "source": [
-    "# Eligibility of Mushrooms"
+    "# Edibility of Mushrooms"
    ]
   },
   {
