--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -512,7 +512,10 @@
     "2) Binary: does-bruise-bleed, veil-type, has-ring\n",
     "\n",
     "We will conduct our data analysis by starting with the 3 continuous variables: width, height, and diameter to determine a mushroom's edibility. From that we could identify the accuracy of the model that uses only physical attributions of a mushroom and determine whether it can provide insight regarding edibility. Later we would add binary variables to the current model and see if the accuracy will be enhanced.\n",
-    "- Describe at least one way that you will visualize the results"
+    "- Describe at least one way that you will visualize the results\n",
+    "\n",
+    "We will start off from plotting scatterplots by using continuous variablespairing each two continous variables on the axes, which would create three parallel plots. We will color the dots according to the predictive results - true poisonous, true edible, false poisonous, and false poisonous.\n",
+    "We will also plot a bar graph to compare the percentage of the four categories above- true poisonous, true edible, false poisonous, and false poisonous."
    ]
   },
   {
