--- a/project.ipynb
+++ b/project.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b3032c18-df3c-4bdc-8160-13f6d06c3934",
+   "metadata": {},
+   "source": [
+    "# Edibility of Mushrooms\n",
+    "## Introduction:\n",
+    "Mushrooms can be made for delicious dishes, but some of them are poisonous! Predicting the edibility from its appearance would be essential when we encounter a an unknown mushroom.\n",
+    "\n",
+    "- In our project, we aim to train a model which uses classification method to predict whether an unknown mushroom is edible or poisonous given various dimensions in its appearance.\n",
+    "\n",
+    "#### The Dataset:\n",
+    "- \"Secondary mushroom data\" from UCI Machine Learning Repository (https://mushroom.mathematik.uni-marburg.de/files/) \n",
+    "- Includes 61069 hypothetical mushrooms with caps based on 173 species (353 mushrooms per species)\n",
+    "- Each mushroom is identified as edible, poisonous, or of unknown edibility\n",
+    "- Of the 20 variables, 3 are continuous, and 17 are nominal (3 are binary, and 14 are categorical)\n",
+    "\n",
+    "## Exploratory data analysis:\n",
+    "#### - Read, clean and wrangle data into a tidy format"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "c06c5527-062d-43c2-975d-32157bfbd8c0",
@@ -294,14 +315,6 @@
     "    metrics(truth=class, estimate=.pred_class)\n",
     "training_metrics"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "256378a1-65e7-4127-8124-866387d8c349",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
