--- a/project.ipynb
+++ b/project.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Edibility of Mushrooms\n",
     "## Introduction:\n",
-    "Mushrooms can be made for delicious dishes, but some of them are poisonous! Predicting the edibility from its appearance would be essential when we encounter a an unknown mushroom.\n",
+    "Mushroom is important in our diet, since it is an essential source of nutrition including niacin, riboflavin, selenium, potassium, and vitamin D which are precluding of hypertension, Alzheimer, Parkinson, and high risk of stroke (Valverde,  Hernández-pérez, & Paredeslópez, 2015). However, not all species of mushroom are edible. According to Chowdhury and Ojha (2017), humans have identified 45,000 species of mushrooms worldwide, but the number of edible species is only 2000. Plus, identifying the edibility mushroom manually is a task too difficult to be done manually (Valverde,  Hernández-pérez, & Paredeslópez, 2015). Automation through Machine learning seems to be a feasible solution. Therefore, in our project, we want to make an attempt to predict the edibility of mushroom from its appearance.\n",
     "\n",
     "- In our project, we aim to train a model which uses classification method to predict whether an unknown mushroom is edible or poisonous given various dimensions in its appearance.\n",
     "\n"
@@ -19,13 +19,18 @@
    "metadata": {},
    "source": [
     "#### The Dataset:\n",
+    "- \"Secondary mushroom data\" from UCI Machine Learning Repository (https://mushroom.mathematik.uni-marburg.de/files/) \n",
+    "- Includes 61069 hypothetical mushrooms with caps based on 173 species (353 mushrooms per species)\n",
+    "- Each mushroom is identified as edible, poisonous, or of unknown edibility\n",
+    "- Of the 20 variables, 3 are continuous, and 17 are nominal (3 are binary, and 14 are categorical)\n",
     "\n",
-    "\"Secondary mushroom data\" from UCI Machine Learning Repository (https://mushroom.mathematik.uni-marburg.de/files/) is used to answer the question. This dataset includes 61069 hypothetical mushrooms with caps based on 173 species (353 mushrooms per species). Each mushroom is identified as one of two classes: edible(e) and poisonous(p), and each observation of a mushroom contains 20 variables. Of the 20 variables, 3 are continuous, and 17 are nominal (3 binary, and 14 categorical). 18 of them are physical characteristics of the mushroom, and 2 are of the mushrooms' growing habitat and season.\n"
+    "## Exploratory data analysis:\n",
+    "#### - Read, clean and wrangle data into a tidy format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "c06c5527-062d-43c2-975d-32157bfbd8c0",
    "metadata": {},
    "outputs": [
@@ -33,6 +38,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.0.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.1     \n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
+      "\u001b[34m•\u001b[39m Use \u001b[32mtidymodels_prefer()\u001b[39m to resolve common conflicts.\n",
+      "\n",
       "\u001b[1mRows: \u001b[22m\u001b[34m61069\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m21\u001b[39m\n",
       "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
       "\u001b[1mDelimiter:\u001b[22m \";\"\n",
@@ -133,16 +167,7 @@
     "set.seed(777)\n",
     "link <- \"https://mushroom.mathematik.uni-marburg.de/files/SecondaryData/secondary_data_shuffled.csv\"\n",
     "mushrooms <- read_delim(link, delim=\";\") # download our dataset\n",
-    "head(mushrooms) # show the first 6 examples\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e8b0a993-018b-4675-af0f-8884500790ec",
-   "metadata": {},
-   "source": [
-    "## Exploratory data analysis:\n",
-    "#### - Read, clean and wrangle data into a tidy format"
+    "head(mushrooms) # show the first 6 examples"
    ]
   },
   {
