More info in intro

--- a/project.ipynb
+++ b/project.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Edibility of Mushrooms\n",
     "## Introduction:\n",
-    "Mushroom is important in our diet, since it is an essential source of nutrition including niacin, riboflavin, selenium, potassium, and vitamin D which are precluding of hypertension, Alzheimer, Parkinson, and high risk of stroke (Valverde,  Hernández-pérez, & Paredeslópez, 2015). However, not all species of mushroom are edible. According to Chowdhury and Ojha (2017), humans have identified 45,000 species of mushrooms worldwide, but the number of edible species is only 2000. Plus, identifying the edibility mushroom manually is a task too difficult to be done manually (Valverde,  Hernández-pérez, & Paredeslópez, 2015). Automation through Machine learning seems to be a feasible solution. Therefore, in our project, we want to make an attempt to predict the edibility of mushroom from its appearance.\n",
+    "Mushroom is important in our diet, since it is an essential source of nutrition including niacin, riboflavin, selenium, potassium, and vitamin D which are precluding of hypertension, Alzheimer, Parkinson, and high risk of stroke (Valverde,  Hernández-pérez, & Paredeslópez, 2015). However, not all species of mushroom are edible. According to Chowdhury and Ojha (2017), humans have identified 45,000 species of mushrooms worldwide, but the number of edible species is only 2000. Plus, identifying the edibility mushroom manually is a task too difficult to be done manually (Valverde,  Hernández-pérez, & Paredeslópez, 2015). Automation seems to be a feasible solution. Therefore, in our project, we attempt to use machine learning to predict the edibility of mushroom from its appearance.\n",
     "\n",
     "- In our project, we aim to train a model which uses classification method to predict whether an unknown mushroom is edible or poisonous given various dimensions in its appearance.\n",
     "\n"
@@ -16,16 +16,14 @@
   {
    "cell_type": "markdown",
    "id": "7a02d965-8338-421e-b395-e11927d1bbd2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### The Dataset:\n",
-    "- \"Secondary mushroom data\" from UCI Machine Learning Repository (https://mushroom.mathematik.uni-marburg.de/files/) \n",
-    "- Includes 61069 hypothetical mushrooms with caps based on 173 species (353 mushrooms per species)\n",
-    "- Each mushroom is identified as edible, poisonous, or of unknown edibility\n",
-    "- Of the 20 variables, 3 are continuous, and 17 are nominal (3 are binary, and 14 are categorical)\n",
+    "\"Secondary mushroom data\" from UCI Machine Learning Repository (https://mushroom.mathematik.uni-marburg.de/files/) is used to answer the question. This dataset includes 61069 hypothetical mushrooms with caps based on 173 species (353 mushrooms per species). Each mushroom is identified as one of two classes: edible(e) and poisonous(p), and each observation of a mushroom contains 20 variables. Of the 20 variables, 3 are continuous, and 17 are nominal (3 binary, and 14 categorical). 18 of them are physical characteristics of the mushroom, and 2 are of the mushrooms' growing habitat and season.\n",
     "\n",
-    "## Exploratory data analysis:\n",
-    "#### - Read, clean and wrangle data into a tidy format"
+    "## Exploratory data analysis:"
    ]
   },
   {
