Finish intro & references, Add sections frame

--- a/project.ipynb
+++ b/project.ipynb
@@ -6,11 +6,8 @@
    "metadata": {},
    "source": [
     "# Edibility of Mushrooms\n",
-    "## Introduction:\n",
-    "Mushroom is important in our diet, since it is an essential source of nutrition including niacin, riboflavin, selenium, potassium, and vitamin D which are precluding of hypertension, Alzheimer, Parkinson, and high risk of stroke (Valverde,  Hernández-pérez, & Paredeslópez, 2015). However, not all species of mushroom are edible. According to Chowdhury and Ojha (2017), humans have identified 45,000 species of mushrooms worldwide, but the number of edible species is only 2000. Plus, identifying the edibility mushroom manually is a task too difficult to be done manually (Valverde,  Hernández-pérez, & Paredeslópez, 2015). Automation seems to be a feasible solution. Therefore, in our project, we attempt to use machine learning to predict the edibility of mushroom from its appearance.\n",
-    "\n",
-    "- In our project, we aim to train a model which uses classification method to predict whether an unknown mushroom is edible or poisonous given various dimensions in its appearance.\n",
-    "\n"
+    "## Introduction\n",
+    "Mushrooms are important in our diet, since they are an essential source of nutrition including niacin, riboflavin, selenium, potassium, and vitamin D which are precluding of hypertension, Alzheimer, Parkinson, and high risk of stroke (Jahan Pinky et al., 2019). However, not all species of mushroom are edible. According to Chowdhury and Ojha (2017), humans have identified 45,000 species of mushrooms worldwide, but the number of edible species is only 2000. Plus, identifying the edibility of a mushroom is a task too difficult to be done manually (Jahan Pinky et al., 2019). Automation through machine learning seems to be a feasible solution. Therefore, in our project, we attempt to apply the classification algorithm to predict the edibility of mushroom using data of its physical characteristics and briefly evaluate the performance of our model. "
    ]
   },
   {
@@ -20,10 +17,19 @@
     "tags": []
    },
    "source": [
-    "#### The Dataset:\n",
+    "### The Dataset\n",
     "\"Secondary mushroom data\" from UCI Machine Learning Repository (https://mushroom.mathematik.uni-marburg.de/files/) is used to answer the question. This dataset includes 61069 hypothetical mushrooms with caps based on 173 species (353 mushrooms per species). Each mushroom is identified as one of two classes: edible(e) and poisonous(p), and each observation of a mushroom contains 20 variables. Of the 20 variables, 3 are continuous, and 17 are nominal (3 binary, and 14 categorical). 18 of them are physical characteristics of the mushroom, and 2 are of the mushrooms' growing habitat and season.\n",
     "\n",
-    "## Exploratory data analysis:"
+    "## Methods & Results\n",
+    "describe in written English the methods you used to perform your analysis from beginning to end that narrates the code the does the analysis.\n",
+    "\n",
+    "- √ loads data from the original source on the web \n",
+    "- √ wrangles and cleans the data from it's original (downloaded) format to the format necessary for the planned analysis\n",
+    "- performs a summary of the data set that is relevant for exploratory data analysis related to the planned analysis \n",
+    "- creates a visualization of the dataset that is relevant for exploratory data analysis related to the planned analysis\n",
+    "- √ performs the data analysis\n",
+    "- creates a visualization of the analysis \n",
+    "(note: all tables and figure should have a figure/table number and a legend)"
    ]
   },
   {
@@ -319,6 +325,32 @@
     "training_metrics <- mushroom_predicted |>\n",
     "    metrics(truth=class, estimate=.pred_class)\n",
     "training_metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0da857c8-04d8-494b-a438-1d077ab8539c",
+   "metadata": {},
+   "source": [
+    "# Discussion\n",
+    "summarize what you found\n",
+    "- discuss whether this is what you expected to find?\n",
+    "- discuss what impact could such findings have?\n",
+    "- discuss what future questions could this lead to?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d3fa9bc-e69d-422a-bc59-b8607d0b33e7",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "- Jahan Pinky, N., Mohidul Islam, S. M., &amp; Sharmin Alice, R. (2019). Edibility detection of mushroom using ensemble methods. International Journal of Image, Graphics and Signal Processing, 11(4), 55–62. https://doi.org/10.5815/ijigsp.2019.04.05 \n",
+    "- D. R. Chowdhury, S. Ojha. (2017). An Empirical Study on Mushroom Disease Diagnosis: A Data Mining Approach. International Research Journal of Engineering and Technology, 4(1), 529-534.\n",
+    "\n",
+    "Data set:\n",
+    "- UCI Machine Learning Repository. (1987). Mushroom data set. \n",
+    "https://archive.ics.uci.edu/ml/datasets/mushroom "
    ]
   }
  ],
