add comment on graphs

--- a/project.ipynb
+++ b/project.ipynb
@@ -519,6 +519,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49fe2abc-0d75-46fd-9221-c3e6288775ce",
+   "metadata": {},
+   "source": [
+    "#### Finding the Optimal `k` value and Building the Final Model\n",
+    "- First, we will build new components that need to be updated for our final model.\n",
+    "    - mainly, we need a new set of `k` values to test and a new workflow.\n",
+    "- We will then tune our model with various `k` values, and pick the best one through a visualization."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "0c049b02-d10b-44ae-8777-ec83295e149d",
