add comment on variable

--- a/project.ipynb
+++ b/project.ipynb
@@ -575,6 +575,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c4064e9-3e67-4b72-aec8-2fa998c2d5bf",
+   "metadata": {},
+   "source": [
+    "From the scatterplot, we can see that the dimensions of poison and edible mushrooms follow simlar trends. However, there are also many large outlier clusters that entirely consist of one class, which also shows in the spread of the marginal density plots. For example, in the marginal density plot regarding the width variable, the density distribution for posinous mushroom has a larger mean and variance, indicating that a greater proportion of poison mushrooms has greater stem width than that of the edible ones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c01e04ea-c0a8-4a8a-a8d4-1b05103b2263",
    "metadata": {},
    "source": [
