--- a/project.ipynb
+++ b/project.ipynb
@@ -804,8 +804,11 @@
     "There is currently no common methodologies other than relying on a mushroom expert to distinguish between poisonous and edible mushrooms (citation: https://www.betterhealth.vic.gov.au/health/healthyliving/fungi-poisoning). Our model could provide the public a tool for identifying the edibility of varieties and assist experts in making judgments. \n",
     "\n",
     "#### - Future Questions and possible improvements:\n",
+    "Our model has an accuracy of 80% in prediction. Though it seems to perform a good job, by looking at the confusion matrix, we see that approximately 8.5% (1309 out of 15268) of poisonous mushrooms are predicted as edible. This may cause a serious problem in practice, when people trust the prediction result by our classifier and eat the poison mushrooms! Future data scientists may try different machine learning algorithms to improve the accuracy of the model.\n",
     "\n",
-    "Our model could be difficult both to collect data for and to use because of the large number of features. Future data scientists might adjust our model to take images as input to make these easier. Additionally, an improved model might use regression to predict a numerical value for a mushroom's toxicity to better represent its non-binary effects."
+    "Furthermore, our model could be difficult both to collect data for and to use because of the large number of features. Future data scientists might adjust our model to take images as input to make these easier. \n",
+    "\n",
+    "Additionally, an improved model might use regression to predict a numerical value for a mushroom's toxicity to better represent its non-binary effects."
    ]
   },
   {
